fixed: github link miror overlap

--- a/style/mirror.css
+++ b/style/mirror.css
@@ -36,6 +36,7 @@
 
 .mirror .back h3{        
     color: antiquewhite;
+    padding-top: .5em;
 }
 
 .front {
